--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img id="logo" src="logo.png">
+            <img id="logo" src="https://i.pinimg.com/originals/d0/b3/46/d0b346b2e7073bc5e24e372453df7dab.png">
             <nav>
             <a href="">О компании</a>
             <a href="">Наши работы</a>
@@ -22,7 +22,7 @@
             </div>
             <div id="about-company">
                 <h2>О компании</h2>
-                <img src="img/minecraft.jpg" alt="Майнкрафт">
+                <img src="https://w-dog.ru/wallpapers/7/6/494686485204775/minecraft-igra-glavnaya-oboi.jpg" alt="Майнкрафт">
                 <p>Всем, привет!</p>
                 <p>Меня зовут Артём Мир.</p>
                 <p>И у меня есть своя команда.</p>
